--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 typer = "^0.3.2"
+ourgroceries = "^1.3.8"
 
 [tool.poetry.scripts]
 cheff = "cheff.driver:app"
